Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
         <div class="container header-content">
             <div class="logo">
                 <i class="fas fa-chart-line"></i>
-                <span>Gerenciador de Ativos para IR</span>
+                <span>Gerenciador de IR</span>
             </div>
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
